# sovos

./: .gitignore  PLEASEFORCEAUTHORTOWORKONME.md  README.md  asdf.txt  rustfmt.toml
kernel/: Cargo.toml  amd64-kernel-none.json  build.rs  linker.ld
kernel/.cargo/: config
kernel/src/: main.rs
libs/: Cargo.toml
libs/arrayvec/: Cargo.toml
libs/arrayvec/src/: lib.rs
libs/arrayvec/tests/: test.rs
libs/bitmap_alloc/: Cargo.toml
libs/bitmap_alloc/src/: iter.rs  lib.rs
libs/bitmap_alloc/tests/: iter_test.rs
libs/bootinfo/: Cargo.toml
libs/bootinfo/src/: lib.rs
libs/cereal/: Cargo.toml
libs/cereal/src/: fcr.rs  ier.rs  iir.rs  lcr.rs  lib.rs  lsr.rs  msr.rs
libs/cpu/: Cargo.toml
libs/cpu/src/: acpi.rs  instructions.rs  interrupt.rs  interrupts.rs  lib.rs  macros.rs  msr.rs  paging.rs  paging2.rs  physaddr.rs  port.rs  regdump.rs  ringzero.rs  segmentation.rs  task.rs  virtaddr.rs
libs/cpu/tests/: test.rs
libs/elf/: Cargo.toml
libs/elf/src/: definitions.rs  lib.rs
libs/elf/src/definitions/: dynamic.rs  mod.rs
libs/fb/: Cargo.toml  font.raw
libs/fb/src/: lib.rs
libs/freetree/: Cargo.toml  README.md
libs/freetree/src/: buddy.rs  lib.rs  poc.rs  unique.rs
libs/freetree/tests/: buddy.rs  log  test.rs
libs/hashmap_alloc/: Cargo.toml
libs/hashmap_alloc/src/: lib.rs
libs/impl_bits/: Cargo.toml
libs/impl_bits/src/: lib.rs
libs/impl_bits/tests/: test.rs
libs/mailbox/: Cargo.toml
libs/mailbox/src/: lib.rs
libs/misc/: Cargo.toml
libs/misc/src/: lib.rs  unique.rs
libs/smbios/: Cargo.toml
libs/smbios/src/: lib.rs  text_iter.rs  v2.rs  v3.rs
libs/uefi/: Cargo.toml
libs/uefi/src/: boot_services.rs  guid.rs  header.rs  lib.rs  memory.rs  protocols.rs  runtime_services.rs  status.rs  system_table.rs
libs/uefi/src/protocols/: gop.rs  mod.rs  simple_text.rs
uefi_wrapper/: Cargo.toml
uefi_wrapper/.cargo/: config.toml
uefi_wrapper/src/: main.rs
xtask/: Cargo.toml
xtask/src/: main.rs
