[workspace]
resolver = "2"
members = [
  "arrayvec",
  "bootinfo",
  "cpu",
  "mailbox",
  "elf",
  "uefi",
  "impl_bits",
  "smbios",
  "freetree",
  "cereal",
  "fb",
]

[profile.release]
debug = true

[workspace.lints.clippy]
# Just not always my cup of tea
needless_return = "allow"

# There is a lot of `x >> 0` usage that I don't want to really get rid of.
identity_op = "allow"

# FIXME
doc_lazy_continuation = "allow"
