[package]
name = "uefi_wrapper"
version = "0.1.0"
authors = ["Soveu <marx.tomasz@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uart_16550 = "0.2.16"

cpu = { version = "*", path = "../libs/cpu" , features = ["ringzero"] }
bootinfo = { version = "*", path = "../libs/bootinfo" }
elf = { version = "*", path = "../libs/elf" }
uefi = { version = "*", path = "../libs/uefi" }
