cargo-features = ["edition2024"]

[package]
name = "bootinfo"
version = "0.1.0"
authors = ["Soveu <marx.tomasz@gmail.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = { path = "../arrayvec", version = "*" }
cpu = { path = "../cpu", version = "*" }
uefi = { path = "../uefi", version = "*" }
fb = { path = "../fb", version = "*" }
