cargo-features = ["edition2024"]

[package]
name = "cereal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpu = { path = "../cpu", version = "*" }
impl_bits = { path = "../impl_bits", version = "*" }
