cargo-features = ["edition2024"]

[package]
name = "uefi"
version = "0.1.0"
authors = ["Soveu <marx.tomasz@gmail.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
impl_bits = { version = "0.1", path = "../impl_bits" }
